--- a/index.html
+++ b/index.html
@@ -3,5 +3,7 @@
 <head></head>
 <body>
     <p>Hello Git.</p>
+    <p>This is the first commit after initial.</p>
+    <p>I wish all go fine.</p>
 </body>
 </html>
