--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
 <body>
     <p>Hello Git.</p>
     <p>This is the first commit after initial.</p>
-    <p>I wish all go fine.</p>
+    <p>I wish all go fine</p>
 </body>
 </html>
